# sale_scrap

./: .gitignore  README.md  pyproject.toml  scrapy.cfg  test.json
salescrap/: items.py  middlewares.py  pipelines.py  settings.py
salescrap/spiders/: rztk_spider.py
