[tool.poetry]
name = "sale-scrap"
version = "0.0.1"
description = "E-markets sale scrapper"
authors = ["Your Name <you@example.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
